// Add changes that you do to here, as well as in the commit message. Commit message can be less specific. IE: "Added to the GamePiece, gave character functionality"
// In THIS file should be specifically what you added. IE: "Added to Gamepiece: -Character movement -Character Collisions - Character Drawing"
<<<<<<< HEAD

// Format: V# - Major Reason/Addition
<<<<<<< HEAD
=======
Dicks McGee - Where'd this come from?
>>>>>>> ed0113c0c5ceb04c7c9fa751e1d6e406a9c0b10a
	dicks mcgee is back in town!
=======
BItch

>>>>>>> 067de74395b09bec6646ec09a950b29e619e02d7
V1 - Initial Release
	- Project Created
	- MethodsLibrary Impelemented
		- Clamps (int, double, float, Vector2)
		- InRange (int, double, float, Vector2)

Joh 3-15-15
------------------------------------------------
Added basic object and character classes:
- Powerup
	- LongerPowerup
	- ShorterPowerup
	- SuperSaiyan
- GamePiece
	- MoveableGamePiece
		- Obstacle
		- Player

Added basic fields with properties to several classes
- Powerup.cs
	-float strength
- GamePiece.cs
	- Vector2 globalPosition
	- Vector2 localPosition (We'll have to talk about whether we still want to use this)
- MoveableGamePiece.cs
	- float speed
- Player.cs
	- float Tempurature
	- float shorts length

Have a happy day!