@@ -35,9 +35,12 @@
     <ApplicationIcon>Icon.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="Button.cs" />
     <Compile Include="Game1.cs" />
     <Compile Include="GamePiece.cs" />
+    <Compile Include="GUIObject.cs" />
     <Compile Include="LongerPowerup.cs" />
+    <Compile Include="Meter.cs" />
     <Compile Include="MoveableGamePiece.cs" />
     <Compile Include="Obstacle.cs" />
     <Compile Include="Player.cs" />
@@ -45,6 +48,8 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ShorterPowerup.cs" />
+    <Compile Include="Slider.cs" />
+    <Compile Include="Sprite.cs" />
     <Compile Include="SuperSaiyan.cs" />
   </ItemGroup>
   <ItemGroup>
