@@ -43,3 +43,11 @@ Added basic fields with properties to several classes
 	- float shorts length
 
 Have a happy day!
+
+Ethan Nichols 3/19/2015
+Added following classes:
+- Sprite
+- GUIObject
+	- Button
+	- Slider
+	- Meter
